--- a/conda.yaml
+++ b/conda.yaml
@@ -1,10 +1,15 @@
 channels:
+  # Define conda channels here. 
   - conda-forge
 
 dependencies:
-  - python=3.9
-  - pip
+  # Define conda packages here. 
+  # If available, always prefer the conda version of a package, installation will be faster and more efficient.
+  # https://anaconda.org/search  
+  - python=3.7.5
+
+  - pip=20.1
   - pip:
-      - rpaframework
-      - robocorp
-      - robocorp-browser
+    # Define pip packages here. 
+    # https://pypi.org/
+    - rpaframework==10.6.0 # https://rpaframework.org/releasenotes.html
